Fix HTML input width on small screens
Fix HTML input width to 100% on small screens

--- a/application/cars.schmolck.de/module/mobile/styles.module.less
+++ b/application/cars.schmolck.de/module/mobile/styles.module.less
@@ -109,11 +109,14 @@
         width: 100%
     }
     .box {
+        @media only screen and (min-width: 769px) {
+            width: 140px;
+        }       
         @media handheld, only screen and (max-width: 768px) {
             width: 45%;
         }
-        @media only screen and (min-width: 769px) {
-            width: 140px;
+        @media handheld, only screen and (max-width: 480px) {
+            width: 100%;
         }
         float: left;
         margin-right: 20px;
